--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Latihan DOM 2</title>
+    <title>Game Suit</title>
     <link href="./src/output.css" rel="stylesheet" />
   </head>
   <body>
